--- a/miniprogram/pages/index/index.scss
+++ b/miniprogram/pages/index/index.scss
@@ -1,11 +1,63 @@
-.btn {
-  margin-top: 12rpx;
+.bluetooth-control {
+  display: flex;
+  flex-direction: column;
 }
-
 .border {
   margin-top: 24rpx;
   height: 1px;
   width: 100vw;
-  background-color: rgba($color: #000000, $alpha: .33);
+  background-color: rgba($color: #000000, $alpha: 0.33);
 }
 
+.device-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .device-item {
+    margin-top: 24rpx;
+    width: 80vw;
+    height: 8vh;
+    padding: 0 2vh;
+    background-color: rgba($color: #000000, $alpha: 0.1);
+    border-radius: 2vh;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.device-name {
+  font-size: 1em;
+}
+.device-more-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+  .info-item {
+    font-size: 0.1em;
+    margin: 0 12rpx;
+  }
+}
+
+.dashboard {
+  position: fixed;
+  width: 100vw;
+  height: 50vh;
+  bottom: 0vh;
+  .control-btns {
+    margin: 0 24rpx;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 24rpx;
+  }
+}
+.btn {
+  margin-top: 12rpx;
+  width: auto !important;
+}
