--- a/miniprogram/pages/hw807/hw807.scss
+++ b/miniprogram/pages/hw807/hw807.scss
@@ -4,14 +4,31 @@
 	justify-content: space-around;
 	align-items: center;
 	margin: 0 48rpx;
-	.max-hr-input {
-		height: 2em;
-		border-style:solid;
-		border-width:2rpx;
-		border-radius: 0.5em;
-		padding: 0 0.5em;
+	.setting-max-hr {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+		.max-hr-input {
+			width: 24vw;
+			height: 2em;
+			border-style:solid;
+			border-width:2rpx;
+			border-radius: 0.5em;
+			padding: 0 0.5em;
+		}
+		.max-hr-btn {
+			width: auto;
+		}
 	}
-	.max-hr-btn {
-		width: auto;
+}
+
+.hr-display {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	.show-btn {
+		width: 32vw;
 	}
 }
