found the useless operations in the process of setting maximum heart rate.

--- a/miniprogram/pages/hw807/hw807.scss
+++ b/miniprogram/pages/hw807/hw807.scss
@@ -28,7 +28,16 @@
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-	.show-btn {
-		width: 32vw;
+	.hr-btns {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		align-items: center;
+		.show-btn {
+			width: 24vw;
+		}
+		.hide-btn {
+			width: 24vw;
+		}
 	}
 }
